# Butchka

./: app.py  chopsticks_database.pkl  models.py  pushgit.sh  pyproject.toml
attached_assets/: Prompt for claude_250515_163207.txt  Prompt.txt  optimized-chopsticks-generator.py
engine/: __init__.py  database_lookup.py  evaluator.py  game_state.py  movegen.py  search.py
static/css/: style.css
static/js/: ai.js  game.js
templates/: about.html  index.html
